--- a/implementation.ipynb
+++ b/implementation.ipynb
@@ -2,88 +2,41 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%python -m venv myenv\n",
-    "%source myenv/bin/activate\n"
+    "# %%python -m venv .venv\n",
+    "# %.venv\\Scripts\\activate\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: pip in /usr/local/python/3.10.13/lib/python3.10/site-packages (24.0)\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "%pip install --upgrade pip\n"
+    "# %pyenv install 3.8.10\n",
+    "# %pyenv global 3.8.10\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting numpy==1.21.0\n",
-      "  Downloading numpy-1.21.0.zip (10.3 MB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m10.3/10.3 MB\u001b[0m \u001b[31m19.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
-      "\u001b[?25h  Installing build dependencies ... \u001b[?25ldone\n",
-      "\u001b[?25h  Getting requirements to build wheel ... \u001b[?25ldone\n",
-      "\u001b[?25h  Preparing metadata (pyproject.toml) ... \u001b[?25ldone\n",
-      "\u001b[?25hBuilding wheels for collected packages: numpy\n",
-      "  Building wheel for numpy (pyproject.toml) ... \u001b[?25ldone\n",
-      "\u001b[?25h  Created wheel for numpy: filename=numpy-1.21.0-cp310-cp310-linux_x86_64.whl size=22528130 sha256=51e4279b7b9afa41fa46e7b4b6d723a3a4cb2f55f445474a8d835dc32c152298\n",
-      "  Stored in directory: /home/codespace/.cache/pip/wheels/05/61/d1/ccc2cd557b39e127ad98a392d9558f3c5dda28764b7f54b2f5\n",
-      "Successfully built numpy\n",
-      "Installing collected packages: numpy\n",
-      "  Attempting uninstall: numpy\n",
-      "    Found existing installation: numpy 1.26.4\n",
-      "    Uninstalling numpy-1.26.4:\n",
-      "      Successfully uninstalled numpy-1.26.4\n",
-      "\u001b[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\n",
-      "pandas 2.2.1 requires numpy<2,>=1.22.4; python_version < \"3.11\", but you have numpy 1.21.0 which is incompatible.\n",
-      "scipy 1.12.0 requires numpy<1.29.0,>=1.22.4, but you have numpy 1.21.0 which is incompatible.\u001b[0m\u001b[31m\n",
-      "\u001b[0mSuccessfully installed numpy-1.21.0\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "%pip install numpy==1.21.0"
+    "# %pip install --upgrade pip\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting cvxopt==1.3.0 (from -r Code/requirement.txt (line 1))\n",
-      "  Using cached cvxopt-1.3.0-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (1.4 kB)\n",
-      "Collecting h5py==3.1.0 (from -r Code/requirement.txt (line 2))\n",
-      "  Using cached h5py-3.1.0.tar.gz (371 kB)\n",
-      "  Installing build dependencies ... \u001b[?25ldone\n",
-      "\u001b[?25h  Getting requirements to build wheel ... \u001b[?25ldone\n",
-      "\u001b[?25h  Installing backend dependencies ... \u001b[?25l-"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "%pip install -r Code/requirement.txt"
@@ -95,12 +48,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%python extract_feature.py --data_name CASIA --mean_signal_length 88000\n",
-    "%%python extract_feature.py --data_name EMODB --mean_signal_length 96000\n",
-    "%%python extract_feature.py --data_name EMOVO --mean_signal_length 96000\n",
-    "%%python extract_feature.py --data_name IEMOCAP --mean_signal_length 310000\n",
-    "%%python extract_feature.py --data_name RAVDE --mean_signal_length 110000\n",
-    "%%python extract_feature.py --data_name SAVEE --mean_signal_length 130000"
+    "%pip install --upgrade pip"
    ]
   },
   {
@@ -109,7 +57,49 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%python main.py --mode train --data RAVDE --split_fold 10 --random_seed 46 --epoch 500 --gpu 0"
+    "%%python Code/extract_feature.py --data_name CASIA --mean_signal_length 88000\n",
+    "%%python Code/extract_feature.py --data_name EMODB --mean_signal_length 96000\n",
+    "%%python Code/extract_feature.py --data_name EMOVO --mean_signal_length 96000\n",
+    "%%python Code/extract_feature.py --data_name IEMOCAP --mean_signal_length 310000\n",
+    "%%python Code/extract_feature.py --data_name RAVDE --mean_signal_length 110000\n",
+    "%%python Code/extract_feature.py --data_name SAVEE --mean_signal_length 130000"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "os.environ['PROTOCOL_BUFFERS_PYTHON_IMPLEMENTATION'] = 'python'\n",
+    "\n",
+    "%run Code/main.py --mode train --data EMOVO --split_fold 10 --random_seed 46 --epoch 500 --gpu 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%run Code/main.py --mode train --data SAVEE --split_fold 10 --random_seed 46 --epoch 500 --gpu 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%run Code/main.py --mode test --data EMODB  --test_path ./Test_Models/EMODB_46 --split_fold 10  --random_seed 46"
    ]
   },
   {
@@ -124,6 +114,59 @@
     "%%python main.py --mode test --data IEMOCAP  --test_path ./Test_Models/IEMOCAP_16 --split_fold 10 --random_seed 16\n",
     "%%python main.py --mode test --data RAVDE  --test_path ./Test_Models/RAVDE_46 --split_fold 10 --random_seed 46\n",
     "%%python main.py --mode test --data SAVEE  --test_path ./Test_Models/SAVEE_44 --split_fold 10 --random_seed 44"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%run Code/main.py --mode predict --data EMOVO  --test_path ./Models/EMOVO_46_2024-03-22_14-39-44 --split_fold 10 --random_seed 1 --mean_signal_length "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tensorflow.keras.models import load_model\n",
+    "import numpy as np\n",
+    "import Code.extract_feature\n",
+    "import Code.Model \n",
+    "import Code.TIMNET\n",
+    "\n",
+    "# Load the model\n",
+    "model = TIMNET_Model(args=args, input_shape=x_source.shape[1:], class_label=CLASS_LABELS)\n",
+    "model.load_weights('Models/EMOVO_46_2024-03-22_14-39-44/10-fold_weights_best_1.hdf5')\n",
+    "\n",
+    "# Load and preprocess the audio file\n",
+    "audio = extract_feature.extract('path/to/audio.wav')\n",
+    "\n",
+    "# Predict the emotion\n",
+    "predictions = model.predict(np.array([audio]))\n",
+    "predicted_emotion = CLASS_LABELS[np.argmax(predictions[0])]\n",
+    "\n",
+    "print(predicted_emotion)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%run Code/extract_feature.py --data_name Output --mean_signal_length 96000"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%run Code/extract_feat_pred.py --data_dir C:/Users/DELL/OneDrive/Documents/TIM-Net_SER/Output/ --output_dir Code/MFCC/"
    ]
   }
  ],
@@ -143,7 +186,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
